--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "typings": "index.d.ts",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf ./build && tsc",
     "start-nodemon": "NODE_ENV='development' nodemon index.ts",
@@ -19,6 +20,8 @@
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.0",
+    "@types/redis": "^2.8.29",
+    "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.4",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
@@ -28,6 +31,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "redis": "^3.1.2",
+    "uuid": "^8.3.2",
     "ws": "^7.4.6"
   }
 }
