--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "rimraf ./build && tsc",
     "start-nodemon": "NODE_ENV='development' nodemon index.ts",
     "start-dev": "npm run build && node build/index.js",
-    "start-pm2" : "pm2 start --name chat -i max ./build/index.js"
+    "start-pm2": "pm2 start --name chat -i max ./build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +32,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "joi": "^17.4.0",
     "redis": "^3.1.2",
     "uuid": "^8.3.2",
     "ws": "^7.4.6"
