--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/mongodb": "^3.6.19",
     "@types/node": "^15.12.0",
     "@types/nodemailer": "^6.4.2",
     "@types/redis": "^2.8.29",
@@ -37,7 +38,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
-    "mongoose": "^5.13.0",
+    "mongodb": "^3.6.9",
     "nodemailer": "^6.6.2",
     "redis": "^3.1.2",
     "uuid": "^8.3.2",
